# face-recognition

./: .gitignore  Makefile  README.md  handoff.md  pytest.ini  requirements.txt
config/: config.yaml
cpp/: CMakeLists.txt  README.md  bench.cpp  pipeline.hpp  recognize_cpp.cpp
docs/: enrollment.md  google_sheets_setup.md  privacy_pipa.md  remote_access.md
hailo/: README.md  bench_hailo.py  download_models.sh  embedding_compat.py  engine_adapter.py  recognize_hailo.py
samples/: README.md
scripts/: attendance-sync.service  attendance.service  bench_python.py  install-kiosk-autostart.sh  install.sh  run-kiosk.sh
src/: camera.py  db.py  enroll.py  face_engine.py  liveness.py  occlusion.py  pose.py  recognize.py  sheets.py  sync.py
src/web/: app.py
src/web/templates/: admin.html  base.html  employee.html  enroll.html  kiosk.html
tasks/: todo.md
tests/: conftest.py  test_db.py  test_face_engine.py  test_occlusion.py  test_pose.py  test_recognize.py  test_reports.py  test_sheets.py
